crates/apollo-compiler/test_data/diagnostics/0013_schema_definition_with_duplicate_root_type_operations.txt
Error: duplicate definitions for the `query` root operation type
   ╭─[ 0013_schema_definition_with_duplicate_root_type_operations.graphql:3:3 ]
   │
 2 │   query: customPetQuery
   │          ───────┬──────  
   │                 ╰──────── previous definition of `query` here
 3 │   query: thatOtherQuery
   │   ──────────┬──────────  
   │             ╰──────────── `query` redefined here
───╯

